# CrownLandFinder

./: .gitignore  README.md
ontario-crownland-open-terrain-finder/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ontario-crownland-open-terrain-finder/backend/: alembic.ini  pyproject.toml  requirements.txt  test_api.py  test_db.py
ontario-crownland-open-terrain-finder/backend/alembic/: README  env.py
ontario-crownland-open-terrain-finder/backend/alembic/versions/: 7f1e312a549a_optimize_geometry_precision_and_simplify.py
ontario-crownland-open-terrain-finder/backend/app/: main.py
ontario-crownland-open-terrain-finder/backend/app/api/: deps.py  routes_admin.py  routes_candidates.py  routes_health.py  routes_layers.py  routes_search.py
ontario-crownland-open-terrain-finder/backend/app/core/: config.py
ontario-crownland-open-terrain-finder/backend/app/db/: base.py  session.py
ontario-crownland-open-terrain-finder/backend/app/db/models/: __init__.py  data_source.py  spatial.py
ontario-crownland-open-terrain-finder/backend/app/services/: ballistic_service.py  candidate_service.py  scoring_service.py  terrain_service.py
ontario-crownland-open-terrain-finder/backend/app/workers/: tasks.py
ontario-crownland-open-terrain-finder/backend/tests/: test_scoring.py  test_scoring_engine.py
ontario-crownland-open-terrain-finder/data_pipeline/: README.md
ontario-crownland-open-terrain-finder/docs/: architecture.md
ontario-crownland-open-terrain-finder/frontend/: lint_errors.txt  package-lock.json  package.json  ts_errors.txt  (+1 more)
(+47 files in other folders)
