[tool.poetry]
name = "ontario-crownland-open-terrain-finder"
version = "0.1.0"
description = "Web GIS platform for preliminary terrain and land-status candidate screening."
authors = ["AI <ai@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
alembic = "^1.11.0"
psycopg2-binary = "^2.9"
geoalchemy2 = "^0.14.0"
celery = "^5.3.0"
redis = "^5.0.0"
gdal = ">=3.4.0"
rasterio = "^1.3.0"
geopandas = "^0.13.0"
shapely = "^2.0.0"
pyproj = "^3.5.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
